# crm

./: .dockerignore  .gitignore  DOMAIN-SETUP.md  Dockerfile  README-DEPLOY.md  README-PGADMIN.md  SSL-SETUP.md  add_user_preferences.py  app.py  azure-ssl-setup.sh  azure-vm-port-setup.sh  build-and-push.ps1  build-and-push.sh  check_html.py  check_invoices.py  check_movements.py  check_stock_movements.py  create_invoice_items.py  create_shipment_tables.py  db_transfer_instructions.txt  debug-ssl.sh  debug_csv_parsing.py  debug_extra_images.py  deploy-fly.ps1  docker-compose.production.yml  docker-compose.yml  docker-login.md  docker_fix.py  export_db.sh  fix_image_urls.py  fix_inline.txt  fix_migrations.sh  fix_products_route.py  fix_products_template.py  fly.toml  import_db.sh  linux_setup_instructions.txt  lt_crm_backup.sql  lt_crm_data_only.sql  renew-ssl.sh  (+17 more)
lt_crm/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.py  create_invoice_items.py  fly.toml  products.csv  pyproject.toml  requirements.txt
lt_crm/.github/workflows/: ci.yml  deploy.yml
lt_crm/app/: __init__.py  celery_beat.py  celery_worker.py  cli.py  context_processors.py  exceptions.py  extensions.py  filters.py  tasks.py
lt_crm/app/api/: __init__.py  (+1 more)
lt_crm/docs/: qa_checklist.md
lt_crm/infra/: Dockerfile  certbot-renew.sh  docker-compose.yml
lt_crm/migrations/: README
lt_crm/tests/: conftest.py  test_accounting.py  test_api_v1.py  test_auth.py  test_clients.py  test_export_api.py  test_export_service.py  test_factory.py  test_import_service.py  test_inventory.py
(+95 files in other folders)
