[tool.poetry]
name = "lt_crm"
version = "0.1.0"
description = "Lithuanian Customer Relationship Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
sqlalchemy = "^2.0.0"
flask-sqlalchemy = "^3.1.0"
flask-migrate = "^4.0.0"
flask-login = "^0.6.2"
flask-babel = "^3.1.0"
flask-talisman = "^1.1.0"
celery = "^5.3.0"
redis = "^5.0.0"
marshmallow = "^3.20.0"
flask-restx = "^1.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
PyJWT = "^2.8.0"
flask-limiter = "^3.5.0"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
reportlab = "^4.0.5"
flask-minify = "^0.42"
webassets = "^2.0"
babel = "^2.13.0"
httpx = "^0.25.0"
sentry-sdk = {extras = ["flask"], version = "^1.32.0"}
prometheus-flask-exporter = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.2.0"
factory-boy = "^3.3.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 